# SupportHubLAN

./: .gitignore  .gitmodules  AGENTS.md  AUDIT_LOG.md  BATCHPATCH_COMMANDS.txt  CMakeLists.txt  FEATURE_PLAN.md  LICENSE  QUEUE_WIRING_LOG.md  README.md  SUPPORTHUBLAN_COMMANDS.txt  build-installer.bat  install-supporthublan.bat  install.bat  package-lock.json  start-supporthublan.bat  supporthublan.html
resources/: resources.qrc
resources/styles/: dark.qss
src/: main.cpp
src/Core/: ConnectionManager.cpp  ConnectionManager.h  ConnectionProfile.cpp  ConnectionProfile.h  EncryptionUtils.cpp  EncryptionUtils.h  Logger.cpp  Logger.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SettingsManager.cpp  SettingsManager.h
src/UI/: ChatWidget.cpp  ChatWidget.h  ConnectionCard.cpp  ConnectionCard.h  DashboardWidget.cpp  DashboardWidget.h  FileTransferWidget.cpp  FileTransferWidget.h  MainWindow.cpp  MainWindow.h  QuickConnectWidget.cpp  QuickConnectWidget.h  RecentSessionsWidget.cpp  RecentSessionsWidget.h  RemoteDesktopWidget.cpp  RemoteDesktopWidget.h  SessionTabWidget.cpp  SessionTabWidget.h  SessionView.cpp  SessionView.h  SidePanel.cpp  SidePanel.h  SidebarWidget.cpp  SidebarWidget.h  ToolbarWidget.cpp  ToolbarWidget.h
src/VNC/: TigerVNCProxy.cpp  TigerVNCProxy.h  UltraVNCProxy.cpp  UltraVNCProxy.h  VNCViewerProxy.cpp  VNCViewerProxy.h
supporthublan-server/: .env.example  README.md  api-client.js  auth.js  db.js  debug_apps.js  dmi-test.txt  package-lock.json  package.json  pstools.js  server.js
supporthublan-server/Tools/: CSV
supporthublan-server/lib/: audit.js  dmidecode.js  logger.js  powershell.js  pstools.js  utils.js  winrm.js  wmic.js
supporthublan-server/routes/: audit.js  credentials.js  deploy.js  hardware.js  hosts.js  inventories.js  laps.js  power.js  processes.js  pstools.js  queues-history.js  queues.js  remote.js  scan.js  scripts.js  services.js  settings.js  updates.js
supporthublan-server/scripts/: hw_asset_scan.cmd  test_hw_scan.js
